# Portfolio-Dashboard-codex

./: .gitignore  AGENTS.md  CHANGELOG.md  DEV.md  Portfolio-Dashboard-codex.code-workspace  Portfolio_Dashboard7.py  REBUILD_PLAN.md  REFRACTOR_NOTES.md  REPO_MAP.md  TASK_BOARD.md  baseline_snapshot.json  docker-compose.yml  profile.out  requirements.txt  tradeslist_JY_30_92Xnew.xlsx  tradeslist_JY_360_91Xnew.xlsx  tradeslist_M2K_15_8Xnew.xlsx  tradeslist_M2K_30_35Xnew.xlsx  tradeslist_MNQ_15_35Xnew.xlsx  tradeslist_MNQ_15_3Xnew.xlsx  tradeslist_MNQ_15_4Xnew.xlsx  tradeslist_MNQ_15_5Xnew.xlsx  tradeslist_MNQ_60_92Xnew.xlsx  tradeslist_NE1_30_35Xnew.xlsx  tradeslist_NG_30_9Xnew.xlsx
api/: AGENTS.md  Dockerfile  README.md  __init__.py  pyproject.toml  requirements.txt
api/api/: __init__.py
api/api/app/: __init__.py  constants.py  dependencies.py  ingest.py  main.py  schemas.py
api/api/app/compute/: __init__.py  caches.py  downsampling.py  exposure.py  portfolio.py
api/api/app/data/: __init__.py  loader.py
api/api/app/routers/: __init__.py  demo.py
api/api/app/routes/: correlations.py  cta.py  exports.py  files.py  metrics.py  optimizer.py  series.py  upload.py
api/api/app/services/: cache.py  data_store.py  riskfolio_optimizer.py  stub_store.py
api/api/app/utils/: calendars.py  parquet_mirror.py
archive/: Portfolio_Dashboard.py  Portfolio_Dashboard2.py  Portfolio_Dashboard3.py  Portfolio_Dashboard4.py  Portfolio_Dashboard5.py  Portfolio_Dashboard6.py
cli/: README.md  __init__.py  config.py  http_client.py  main.py  options.py
src/: allocator.py  etl.py  (+12 more)
(+45 files in other folders)
